--- a/_posts/2017-03-03-Lab5.markdown
+++ b/_posts/2017-03-03-Lab5.markdown
@@ -14,6 +14,8 @@ deben hacer click en este <a href="https://classroom.github.com/assignment-invit
 uso de la herramienta que deseen para programar y transferir su codigo al sistema operativo que corre sobre ARMv8, pueden usar <i>scp</i> si lo desean, y trabajar en sublime, pueden utilizar 
 algún editor de texto de <b>CLI</b> como son <i>nano</i> o <i>vim</i>. Pueden incluso tener copias del repositorio en ambas maquinas, trabajar en una, hacer push, y hacer pull en otra para compilar.
 
+Algo muy importante que tienen que tomar en cuenta es <b>comentariar su codigo</b> . Estamos trabajando a un nivel muy bajo, y si no escriben que representa lo que estan haciendo, no podran entenderlo
+despues.
 
 ---
 #### Ejercicio 1: Codificando Algunas Instrucciones.
@@ -95,8 +97,5 @@ FLOAT: -23.000000
 ```
 Noten que el valor en float no debe cambiar con respecto al valor entero, esto se debe a que la codificación que ustedes usaron, interpretada según el estándar IEEE 754 representa el mismo entero
 que recibieron, pero escrito (en sentido de bits) de una forma diferente. 
-
-El ejercicio tiene una gran cantidad de código, esto es porque desplegar la representación en punto flotante no funciona correctamente si se hace desde printf, así que la función printfloat que ocupa
-cerca de 80 líneas fue implantada para esto. No le pongan mucha importancia a esa seccion de codigo, pero asegurence de lo tocarla para que todo funcione correctamente.
 
 Una vez terminaron ambos ejercicios, deben hacer el commit final del laboratorio, y subir el link del repositorio al GES para que nosotros podamos revisarlo. 
