--- a/_posts/2017-03-17-Lab-7.markdown
+++ b/_posts/2017-03-17-Lab-7.markdown
@@ -1,11 +1,10 @@
 ---
 layout: post
-title:  "Laboratorio 7"
-date:   2017-03-17
+title:  "Laboratorio 4"
+date:   2017-02-16
 category: lab
 description: >
-	Continuando con el proyecto del ensamblador, vamos a implementar una tabla de símbolos que ustedes podrán utilizar para su
-	proyecto.
+    En este laboratorio ustedes van a hacer un par de programas en ensamblador utilizando el Instruction Set de Armv8. Utilizaremos lo aprendido en clase
 ---
 
 #### Setup
