--- a/_posts/2017-03-17-Lab-7.markdown
+++ b/_posts/2017-03-17-Lab-7.markdown
@@ -4,7 +4,7 @@ title:  "Laboratorio 7"
 date:   2017-03-17
 category: lab
 description: >
-	Continuando con el proyecto del ensamblador, vamos a implementar una tabla de símbolos que ustedes podrán utilizar para su proyecto.
+	Continuando con el proyecto del ensamblador, vamos a implementar una tabla de simbolos que ustedes podran utilizar para su proyecto.
 ---
 
 #### Setup
