lab7 descripcion actualizada

--- a/_posts/2017-03-17-Lab-7.markdown
+++ b/_posts/2017-03-17-Lab-7.markdown
@@ -4,8 +4,8 @@ title:  "Laboratorio 7"
 date:   2017-03-17
 category: lab
 description: >
-	Continuando con el proyecto del ensamblador, Continuando con el proyecto del ensamblador, vamos a implementar una tabla de símbolos que ustedes podrán utilizar para su
-	proyecto.vamos a implementar una tabla de simbolos que ustedes podran utilizar para su proyecto.
+    En este laboratorio ustedes van a Continuando con el proyecto del ensamblador, vamos a implementar una tabla de símbolos que ustedes podrán utilizar para su
+	proyecto.hacer un par de programas en ensamblador utilizando el Instruction Set de Armv8. Utilizaremos lo aprendido en clase
 ---
 
 #### Setup
