--- a/_posts/2017-03-17-Lab-7.markdown
+++ b/_posts/2017-03-17-Lab-7.markdown
@@ -4,8 +4,7 @@ title:  "Laboratorio 7"
 date:   2017-03-17
 category: lab
 description: >
-    En este laboratorio ustedes van a Continuando con el proyecto del ensamblador, vamos a implementar una tabla de símbolos que ustedes podrán utilizar para su
-	proyecto.hacer un par de programas en ensamblador utilizando el Instruction Set de Armv8. Utilizaremos lo aprendido en clase
+	Continuando con el proyecto del ensamblador, vamos a implementar una tabla de simbolos que ustedes van a poder utilizar en su proyecto.
 ---
 
 #### Setup
