Valgrid +  Clasificación de Bugs

--- a/page/es/docs/notes/01_C.md
+++ b/page/es/docs/notes/01_C.md
@@ -134,3 +134,15 @@ C pasa los argumentos a una función por valor, esto quiere decir que la informa
 - Puede ser lento buscar espacio disponible
 - Recordar que manejar el heap es tarea del programador.
 
+### Uso de Valgrid
+Se puede descargar de: http://valgrind.org/
+- Ayuda a la depuración de problemas de memoria. Puede servir para detectar problemas como fugas de memoria (memory leak).
+ 
+### Clasificación de Bugs
+- Bohr Bugs
+	- sabemos en precisamente en donde está  (como los electones en el modelo atómico de Bohr)
+	- Fáciles de reproducir
+- Heinsenbugs
+	- Difíciles de diagnosticar
+	- Dificiles de reproducir
+
