Notas de Clase: C. Agregue información sobre punteros de punteros y las estructuras de memoria.

--- a/page/es/docs/notes/01_C.md
+++ b/page/es/docs/notes/01_C.md
@@ -1,12 +1,22 @@
 # Introducción a C
-C es un lenguaje de programación desarrollado en el año 1972 por Dennis Ritchie. El lenguaje C es un lenguaje estructuro el cual a pesar de ser un lenguaje de alto nivel da acceso a hacer uso de la memoria, registros, etc.
+C es un lenguaje de programación desarrollado en el año 1972 por Dennis Ritchie. El lenguaje C es un lenguaje estructuro el cual a pesar de ser un lenguaje de "alto nivel", da acceso a hacer uso de la memoria, registros, etc.
 
-C es un lenguaje compilado, para poder compilar y ejecutar un archivo llamado HelloWorld.c, se realiza de la siguiente manera:
+C es un lenguaje compilado; se compila una vez para cada arquitectura y se genera un binario que se puede ejecutar directamente. Para poder compilar y ejecutar un archivo llamado HelloWorld.c, se realiza de la siguiente manera:
 
 ~~~C
 $ gcc HelloWorld.c		// se compila el archivo
 $ ./a.out				// se ejecuta el programa
 $ Hello World 			//output del programa, en este caso
+~~~
+
+Notese que el compilador que estamos utilizando se llama **gcc**. ***gcc** se encuentra por defecto en la mayoria de sistemas operativos con kernel **linux**. Cuando nosotros no especificamos un nombre para el archivo de salida, **cgg** lo nombra, por defecto, **a.out**.
+
+Si queremos especificar un nombre para el archivo de salida entonces podemos utilizar la bandera **-o**:
+
+~~~C
+$ gcc -o Hello HelloWorld.c		// se compila el archivo
+$ ./Hello				        // se ejecuta el programa
+$ Hello World 			        //output del programa, en este caso
 ~~~
 
 ## Comentarios en c
@@ -17,9 +27,9 @@ $ Hello World 			//output del programa, en este caso
 ~~~~
 ## Tipos de declaración
 
-Las variables deben ser declaradas antes de usarse y el tipo de la variable no puede ser cambiado. En C, el tamaño de la variable depende de la arquitectura en la cual se este trabajando.
+Las variables deben ser declaradas antes de usarse y el tipo de la variable no puede ser cambiado. En C, el tamaño de la variable depende de la arquitectura en la cual se este trabajando (x_86, x_86_84, ARM, RISC-V, etc.).
 
-Si no se inicializa el valor de la variable, al imprimirla imprimirá la "basura", es decir, los datos que estaban ubicados  en la dirección de memoria en donde la variable fue guardada.
+Algo muy importante que diferencia lenguajes como Java de C, es que en C, si no se inicializa el valor de la variable, la podemos utilizar sin problemas, pero contendrá información "basura", es decir, los datos que estaban ubicados previamente en la dirección de memoria en donde la variable fue guardada.
 
 ## Declaración de constantes
 ~~~C
@@ -29,13 +39,50 @@ const int CONSTANTE_VARIABLE = 25;
 ~~~
 ## Valores Booleanos en C
 
-Es un importante mencionar que en C todo lo que sea diferente de 0 se considera verdadero, es decir si se desea representar el valor falso se debe utilizar un 0. 
+Es un importante mencionar que en C, las variables tipo booleanas no existen. En vez de eso, todo valor diferente de 0 se considera verdadero, es decir si se desea representar el valor falso se debe utilizar un 0. 
 
 ## Funciones en C
 
 - En la declaración de la función debe ir el tipo de dato del valor de retorno y de todos los argumentos.
 - void para declarar funciones sin nigun retorno.
-- Deben ser declaradas antes de ser usadas.
+- Las funciones en C deben ser declaradas antes de ser usadas; esto implica que tendremos problemas con funciones de este tipo:
+
+~~~C
+int funcion1(int x){
+	if(x < 10){
+	    return function2(x);
+	}
+	return x+1;
+}
+
+int funcion2(int x){
+	if(x>= 10){
+	    return function1(x);
+	}
+	return x-1;
+}
+~~~
+
+Noten que aqui **function1(int x)** ejecuta **function2(int x)**, pero **function2(int x)** esta definida abajo de **function1(int x)**. Para solucionar este problema, declaramos las funciones antes de definirlas:
+
+~~~C
+int function1(int x);
+int function2(int x);
+
+int funcion1(int x){
+	if(x < 10){
+	    return function2(x);
+	}
+	return x+1;
+}
+
+int funcion2(int x){
+	if(x>= 10){
+	    return function1(x);
+	}
+	return x-1;
+}
+~~~
 
 #### Ejemplo: Función que retorna un valor entero.
 
@@ -86,37 +133,54 @@ char *pc; //declaración de un puntero dé datos tipo char.
 //definición de un puntero el cual puede ser asignado a diferentes tipos.
 void *vp;
 ~~~
-#### Ejemplo:
+
+Podemos incluso definir un puntero que apunta a un puntero
+#### Ejemplo: Puntero de Punteros
+~~~C
+//definición una variable, un puntero que apunta a ella, y un puntero que apunta a este puntero
+char c = '1';
+char *p = &c;
+char **args = &p;
+~~~
+
+
+#### Ejemplo: Asiginar Valores Usando Punteros
 ~~~C
 int x = 10;
 int *pi = &x; //al puntero pi se le asigna la dirección de memoria de la variable x.	
 int valorx = *pi; // en la variable valorx se almacena el valor al cual apunta la variable pi, en este ejemplo es 10
 ~~~
-C pasa los argumentos a una función por valor, esto quiere decir que la información de la variable que se recibe en la función es almacenada en una diferente dirección de memoria por lo tanto si la variable se altera dentro de la función, solo será modificada en el contexto de la función.
+C pasa los argumentos a una función por valor, esto quiere decir que la información de la variable que se recibe en la función es almacenada en una diferente dirección de memoria por lo tanto si la variable se altera dentro de la función, solo será modificada en el contexto de la función. 
 
-# C memory managment
-- Estructura de memoria cuando se ejecuta un programa
-- Hay una parte donde se guarda en código de nuestro programa, las "instrucciones"
-- Area de datos estático: comienza un poco "arriba" del codigo (hablando de direcciones de memoria). Cada OS puede ponerle a cada sección un límite distinto. Las variables globales se guardan aqui. En el ejemplo de la diapositiva: static_data se guarda aquí. 
-	- No hay variables nuevas durante la ejecución del programa
-	- No tiene un puntero como tal (a direfencia del area de codigo que tiene el PC)
+Para poder modificar el valor de una variable *x* declarada en una función *A* desde una función *B*, enviamos un puntero que apunta a *x* como argumento a la función *B*:
+#### Ejemplo:
+~~~C
+void addOne(int* x){
+    (*x)++;
+}
 
-- El stack: 
-	- 3 operaciones básicas de un stack: push, pop, top ( obervar que hay)
-	- CUIDADO: con la ubicacion del stack. es decir el stack baja en direcciones de memoria. "Crece hacia abajo en el diagrama de la diapositiva"
-	- A nivel ensamblador: el stack pointer. Probablemente el puntero más usado en assembler
-	- Variables locales y parámetros se guardan en el stack
-	- Dirección de retorno (en C no necesitamos preocuparnos por eso)
-- El heap
-	- Es dinamico: listas encadenadas, objestos. Todas aquellas cosas que no tienen un tamaño fijo o determinado al momento de compilar
-	- El heap "crece" hacia las direcciones de memoria más altas
-	- "Stack Overflow" o "Heap Overflow"
+int functionA(){
+    int x = 10;
+    addOne(&x);
+    return x;
+}
+~~~
 
-- El compilador es el que se encarga de pedir memoria en cada llamada y devolverla cuando se termina, es decir, el Stack es "transparente" al programador de C.
+Noten el usuo de los paréntesis, sin los paréntesis, aumentariamos en 1 el puntero, pero al agregarlos, aumentamos en 1 el valor al que apunta el puntero
 
-- Tener cuidado con los punteros a varibles que están en el escope de una llamada a una función.
+# Manejo de Memoria en C
+Podemos diferenciar varias estructuras de memoria existentes al momento de ejecutar un programa:
+- Àrea de Texto: Almacena las instrucciones que estamos ejecutando
+- Àrea de Datos: Almacena datos como numeros y strings que son constantes globales en nuestro programa
+- Stack: Almacena datos **estaticos** como variables, arreglos de tamaño predefinito, etc. Estos datos tienen la caracteristica de que no existen en todo momento de la ejecución del programa. Por ejemplo, una variable *x* definida en cierta función solo existirá cuando esa función se este ejecutando. Algunas cosas a tomar en cuenta sobre el stack, aunque no las veremos directamente en C, son las siguientes:
+	- Tiene 3 operaciones básicas de un stack: push, pop, top (observar que hay)
+	- **CUIDADO** con la ubicacion del Stack; en assembler veremos que el Stack *crece habia abajo*, lo que significa que cuando agregamos un dato, la dirección de memoria disminuye
+	- A nivel ensamblador existe un registro llamado **Stack Pointer** o **SP**. Probablemente el registro más usado en assembler
+	- Las variables locales y los parámetros de las funciones se guardan en el Stack
+	- La dirección de retorno tambien se guarda en el Stack
+	- El compilador es el que se encarga de pedir memoria en cada llamada y devolverla cuando se termina, es decir, el Stack es "transparente" al programador de C
 
-- No depender de posiciones absolutos de memoria
+- Heap: Almacena datos **dinámicos**, como por ejemplo, un arreglo del tamaño indicado por el usuario. En C, el Heap es la unica estructura de memoria que es administrada directamente por el programador (reservar, liberar y respetar el espacio asignado). El heap, a diferencia del Stack, crece a direcciones de memorias más altas.
 
 ## Manejo del Heap
 - función `malloc()`: los devuelve un bloque de memoria. No los inicializa con ningún valor.
@@ -145,4 +209,3 @@ Se puede descargar de: http://valgrind.org/
 - Heinsenbugs
 	- Difíciles de diagnosticar
 	- Dificiles de reproducir
-
